Alpha 0.1.8.8
- Fixed bounds checking for rotation point of regular door. Thanks, @Blaster76606 for the bug report.

Alpha 0.1.8.7
- Fixed missing openDirection option for the portcullis type. Thanks, @RetroCh1cken for the bug report!
- Fixed autoCloseTimers potentially overlapping. Thanks, @RetroCh1cken for the bug report!
- Selection tool is removed from player's inventory if they log out before finishing or timing out any process involving a selection tool.
- Selection tool cannot be moved into chests etc anymore.
- Soft removed Elevator door type to avoid confusion. When reintroduced (with elevating capabilities), they'll show up as elevators again. Until then, they look and function like portcullises.
- Removed 1 block depth restriction from portcullises.
- Added support for 1.14's new blocks.
- Added missing multipliers for the new door types to the config. Thanks, @kristinr96 for the report!
- Instead of a single powerblocktype, the config now accepts a list of materials.
- Fixed NPE thrown by bypassCompat when checking for offline players. Thanks, @bolleboor and @mafen for the bug reports! 
- Fixed incorrect import throwing errors. Thanks, @Relaxing for the bug report!

Alpha 0.1.8.6
- Connected blocks (i.e. fences, iron bars, panes, etc) now stay connected in portcullises, sliding doors, and elevators in 1.13.* and 1.14.*.
- Fixed regular doors (and presumably other blocks) spawning ghost versions when used in a door. Thanks, @RedYoshi for the bug report!

Alpha 0.1.8.5
- Added permission node "bigdoors.admin.bypasscompat" to bypass compatibility stuff like WorldGuard and PlotSquared )door creation and toggling).
- OPs also bypass compatibility stuff.
- When a compatibility hook doesn't allow you to create a door somewhere, you'll now be notified which specific hook is blocking access.

Alpha 0.1.8.4
- Fixes potential issues caused by accidental inclusion of experimental code.

Alpha 0.1.8.3
- Fixed incorrect import. Thanks, @mmuziek for the bug report!
