@@ -1,9 +1,11 @@
 package nl.pim16aap2.bigDoors.util;
 
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.UUID;
 
 import org.bukkit.Material;
-import org.bukkit.craftbukkit.libs.org.apache.commons.codec.binary.Base64;
+//import org.bukkit.craftbukkit.libs.org.apache.commons.codec.binary.Base64;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.SkullMeta;
@@ -28,8 +30,39 @@ public enum Skull
     CACTUS("MHF_Cactus"), CAKE("MHF_Cake"), CHEST("MHF_Chest"), MELON("MHF_Melon"), LOG("MHF_OakLog"),
     PUMPKIN("MHF_Pumpkin"), TNT("MHF_TNT"), DYNAMITE("MHF_TNT2");
 
-    private static final Base64 base64 = new Base64();
     private String id;
+
+    // Spigot 1.14 moved Apache import. This way it should support the new versions too.
+    // NOTE: UNTESTED!
+    private static Object base64;
+    private static Method encode;
+    static
+    {
+        try
+        {
+            base64 = new org.bukkit.craftbukkit.libs.org.apache.commons.codec.binary.Base64();
+            try
+            {
+                encode = org.bukkit.craftbukkit.libs.org.apache.commons.codec.binary.Base64.class.getDeclaredMethod("encode", String.class);
+            }
+            catch (NoSuchMethodException | SecurityException e)
+            {
+                e.printStackTrace();
+            }
+        }
+        catch (NoClassDefFoundError e)
+        {
+            base64 = new org.apache.commons.codec.binary.Base64();
+            try
+            {
+                encode = org.apache.commons.codec.binary.Base64.class.getDeclaredMethod("encode", String.class);
+            }
+            catch (NoSuchMethodException | SecurityException e2)
+            {
+                e2.printStackTrace();
+            }
+        }
+    }
 
     private Skull(String id)
     {
@@ -50,7 +83,17 @@ public enum Skull
         {
             throw new IllegalStateException("Profile doesn't contain a property map");
         }
-        byte[] encodedData = base64.encode(String.format("{textures:{SKIN:{url:\"%s\"}}}", url).getBytes());
+
+        byte[] encodedData;
+        try
+        {
+            encodedData = (byte[]) encode.invoke(base64, String.format("{textures:{SKIN:{url:\"%s\"}}}", url).getBytes());
+        }
+        catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e)
+        {
+            e.printStackTrace();
+            return null;
+        }
         propertyMap.put("textures", new Property("textures", new String(encodedData)));
         ItemStack head = new ItemStack(XMaterial.PLAYER_HEAD.parseMaterial(), 1, (short) 3);
         ItemMeta headMeta = head.getItemMeta();
