@@ -1,5 +1,7 @@
 Alpha 0.1.8.8
-- Fixed bounds checking for rotation point of regular door. Thanks, @Blaster76606 for the bug report.
+- Fixed bounds checking for rotation point of doors and drawbridges. Thanks, @Blaster76606 for the bug report.
+- Fixed incorrect import. Auto-updater will work again. Thanks, @Auroman for the bug report!
+- 1 wide drawbridges are now allowed, but only if created when flat!
 
 Alpha 0.1.8.7
 - Fixed missing openDirection option for the portcullis type. Thanks, @RetroCh1cken for the bug report!
